force-app/main/default/objects/Dummy29__c/Dummy29__c.object-meta.xml
<CustomObject>
    <label>Dummy29</label>
    <nameField>
        <label>Dummy29 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dummy29</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>