force-app/main/default/objects/Dummy29__c/fields/FooBar055__c.field-meta.xml
<CustomField>
    <fullName>FooBar055__c</fullName>
    <label>FooBar055</label>
    <length>255</length>
    <type>Text</type>
</CustomField>