force-app/main/default/objects/Dummy29__c/fields/FooBar098__c.field-meta.xml
<CustomField>
    <fullName>FooBar098__c</fullName>
    <label>FooBar098</label>
    <length>255</length>
    <type>Text</type>
</CustomField>