force-app/main/default/objects/Dummy29__c/fields/FooBar100__c.field-meta.xml
<CustomField>
    <fullName>FooBar100__c</fullName>
    <label>FooBar100</label>
    <length>255</length>
    <type>Text</type>
</CustomField>